--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
-  
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
+  "type":"module",
   "scripts": {
     "dev": "concurrently \"nodemon\" \"npm run stripe\"",
     "stripe": "stripe listen --forward-to localhost:7000/api/order/checkout/webhook",
