--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.mjs",
+  "main": "./src/index.ts",
   "type":"module",
   "scripts": {
     "dev": "concurrently \"nodemon\" \"npm run stripe\"",
